<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.ConfiguracoesFragment" >

    <TextView
        android:id="@+id/textConfigNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/topico_config_nota"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textTamanhoFonte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_config_fonte"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekTamanhoFonte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:max="2"
        android:progress="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFontePequeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/text_config_fonte_p" />

        <TextView
            android:id="@+id/textFontePadrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/text_config_fonte_m" />

        <TextView
            android:id="@+id/textFonteGrande"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/text_config_fonte_g" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCorFundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/topico_config_cor"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupCorFundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioAmarelo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/background_radio_amarelo"
            android:text="@string/radio_cor_amarelo" />

        <RadioButton
            android:id="@+id/radioVerde"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/background_radio_verde"
            android:gravity="center_vertical"
            android:text="@string/radio_cor_verde" />

        <RadioButton
            android:id="@+id/radioBranco"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/background_radio_branco"
            android:text="@string/radio_cor_branco" />
    </RadioGroup>

    <TextView
        android:id="@+id/textExportarNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/topico_config_exportar"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/buttonExportarNotas"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button_exportar"
        android:text="@string/botao_exportar_notas"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/topico_config_dados"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textDeletarDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_config_deletar" />

    <TextView
        android:id="@+id/textConfiguracoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/topico_config_config"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textRestaurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_config_restaurar" />

</LinearLayout>