<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textTopicoOrdenar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/topico_filtrar_ordenacao"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:checkedButton="@id/radioMaisRecentes">

        <RadioButton
            android:id="@+id/radioMaisRecentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ordenar_recentes" />

        <RadioButton
            android:id="@+id/radioMaisAntigas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ordenar_antigas" />

    </RadioGroup>

        <TextView
            android:id="@+id/textTopicoPesquisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/topico_filtrar_pesquisa"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/editPesquisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/hint_edit_pesquisar"
            android:inputType="text"
            android:maxLength="20" />

        <TextView
            android:id="@+id/textTopicoOndeAplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/topico_filtrar_aplicar"
            android:textColor="@color/colorAccent" />

        <CheckBox
            android:id="@+id/checkNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_aplicar_notas" />

        <CheckBox
            android:id="@+id/checkLembretes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/check_aplicar_lembretes" />

    <Button
        android:id="@+id/buttonAplicarFiltros"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/button_filtrar_aplicar"
        android:textColor="@android:color/white" />

    </LinearLayout>